[package]
name = "ld50"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "LD50"
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.6", features= ["bevy_gltf", "bevy_winit", "render", "png"] }
bevy_kira_audio = { version = "0.8", features = ["mp3"] }
#bevy_prototype_debug_lines = "0.3"
bevy-inspector-egui = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.4"
parking_lot = "0.11"
bevy_tweening = "0.3"
chrono = "0.4"
